; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/ap/extr_mbo_ap.c_mbo_ap_sta_free.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/ap/extr_mbo_ap.c_mbo_ap_sta_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sta_info = type { %struct.mbo_non_pref_chan_info* }
%struct.mbo_non_pref_chan_info = type { %struct.mbo_non_pref_chan_info* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mbo_ap_sta_free(%struct.sta_info* %0) #0 {
  %2 = alloca %struct.sta_info*, align 8
  %3 = alloca %struct.mbo_non_pref_chan_info*, align 8
  %4 = alloca %struct.mbo_non_pref_chan_info*, align 8
  store %struct.sta_info* %0, %struct.sta_info** %2, align 8
  %5 = load %struct.sta_info*, %struct.sta_info** %2, align 8
  %6 = getelementptr inbounds %struct.sta_info, %struct.sta_info* %5, i32 0, i32 0
  %7 = load %struct.mbo_non_pref_chan_info*, %struct.mbo_non_pref_chan_info** %6, align 8
  store %struct.mbo_non_pref_chan_info* %7, %struct.mbo_non_pref_chan_info** %3, align 8
  %8 = load %struct.sta_info*, %struct.sta_info** %2, align 8
  %9 = getelementptr inbounds %struct.sta_info, %struct.sta_info* %8, i32 0, i32 0
  store %struct.mbo_non_pref_chan_info* null, %struct.mbo_non_pref_chan_info** %9, align 8
  br label %10

10:                                               ; preds = %13, %1
  %11 = load %struct.mbo_non_pref_chan_info*, %struct.mbo_non_pref_chan_info** %3, align 8
  %12 = icmp ne %struct.mbo_non_pref_chan_info* %11, null
  br i1 %12, label %13, label %20

13:                                               ; preds = %10
  %14 = load %struct.mbo_non_pref_chan_info*, %struct.mbo_non_pref_chan_info** %3, align 8
  store %struct.mbo_non_pref_chan_info* %14, %struct.mbo_non_pref_chan_info** %4, align 8
  %15 = load %struct.mbo_non_pref_chan_info*, %struct.mbo_non_pref_chan_info** %3, align 8
  %16 = getelementptr inbounds %struct.mbo_non_pref_chan_info, %struct.mbo_non_pref_chan_info* %15, i32 0, i32 0
  %17 = load %struct.mbo_non_pref_chan_info*, %struct.mbo_non_pref_chan_info** %16, align 8
  store %struct.mbo_non_pref_chan_info* %17, %struct.mbo_non_pref_chan_info** %3, align 8
  %18 = load %struct.mbo_non_pref_chan_info*, %struct.mbo_non_pref_chan_info** %4, align 8
  %19 = call i32 @os_free(%struct.mbo_non_pref_chan_info* %18)
  br label %10

20:                                               ; preds = %10
  ret void
}

declare dso_local i32 @os_free(%struct.mbo_non_pref_chan_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
